--- a/Python_Final_Project.ipynb
+++ b/Python_Final_Project.ipynb
@@ -1774,20 +1774,20 @@
     "\n",
     "Based on the Exploratory Data Analysis (EDA) conducted on global forest area trends, several key insights emerge:\n",
     "\n",
-    "1. **Forest Area Trends by Country (1990-2021)**:\n",
+    "1. Forest Area Trends by Country (1990-2021):\n",
     "   - Over the period from 1990 to 2021, countries show varying trends in forest area. Some countries maintained or even expanded their forest areas, likely due to conservation efforts or reforestation policies, while others faced significant deforestation pressures, possibly from agricultural expansion, urban development, or logging.\n",
     "   - The year-by-year average forest area for countries shows gradual changes, with declines indicating deforestation trends in certain regions and gains in others.\n",
     "\n",
-    "2. **Forest Area Distribution by Region**:\n",
+    "2. Forest Area Distribution by Region:\n",
     "   - Regions displayed substantial variance in average forest cover. Certain regions with high forest density have distinct forest conservation challenges compared to regions with lower forest cover. Regions such as [insert region name, e.g., South America] may have shown higher forest areas, while [another region, e.g., Africa] could reflect different pressures impacting forest coverage.\n",
     "\n",
-    "3. **Impact of Income Levels on Forest Area**:\n",
+    "3. Impact of Income Levels on Forest Area:\n",
     "   - Forest area varies significantly across income groups. Lower-income countries, facing fewer resources for conservation and sustainable practices, might be more vulnerable to deforestation. Conversely, high-income countries often exhibit greater forest conservation resources, which may result in higher forest area stability or growth.\n",
     "\n",
-    "4. **Top Countries by Deforestation and Conservation**:\n",
+    "4. Top Countries by Deforestation and Conservation:\n",
     "   - Analysis of the top 10 countries with the most and least deforestation reveals clear contrasts. Countries with successful forest area maintenance or growth may have implemented effective conservation practices or policies. In contrast, countries with high deforestation rates face critical pressures from industries or land-use changes.\n",
     "\n",
-    "5. **Deforestation Rate Heatmap**:\n",
+    "5. Deforestation Rate Heatmap:\n",
     "   - The heatmap visualization of deforestation rates by country over time provides a clear picture of where deforestation has been most persistent. Countries with consistently high deforestation rates are often facing economic, policy, or environmental pressures. This visualization helps identify critical regions where intervention may be needed to curb deforestation rates.\n",
     "\n",
     "### Summary\n",
