Added notes to data cleaning section

--- a/Python_Final_Project.ipynb
+++ b/Python_Final_Project.ipynb
@@ -605,7 +605,17 @@
    "id": "ec595c58-4075-4c32-b512-08c01fc88498",
    "metadata": {},
    "source": [
-    "Before cleaning, inspect the data for any issues (null values, duplicates, non-essential columns or rows)"
+    "In this section, we clean the dataset to ensure its quality and readiness for analysis:\n",
+    "\n",
+    "- **Handling missing values**: We identify and deal with any missing or `NaN` values in the dataset. Depending on the situation, this might involve:\n",
+    "  - Removing rows or columns with missing data.\n",
+    "  - Filling missing values with a placeholder (e.g., mean, median, mode or a constant).\n",
+    "\n",
+    "- **Removing duplicates**: We check for and remove any duplicate rows in the dataset to ensure we are working with unique records.\n",
+    "\n",
+    "- **Data type correction**: We ensure that each column has the correct data type (e.g., numeric columns as `float`, categorical columns as `object`).\n",
+    "\n",
+    "Data cleaning ensures that the dataset is accurate, consistent, and structured in a way that makes analysis more reliable and meaningful.\n"
    ]
   },
   {
@@ -613,7 +623,7 @@
    "id": "736bbb91-a031-4ab4-92f3-8050056479b2",
    "metadata": {},
    "source": [
-    "`print_null_values` function notes"
+    "The `print_null_values` function identifies and displays the number of missing (`null`) values in each column, helping to assess data completeness before cleaning.\n"
    ]
   },
   {
@@ -694,7 +704,7 @@
    "id": "88e8cc6e-a416-48a4-9518-69176e348e0f",
    "metadata": {},
    "source": [
-    "`trim_spaces` function to remove leading and trailing spaces before checking for duplicates"
+    "The `trim_spaces` function removes leading and trailing whitespace from string columns to ensure consistent formatting in the dataset.\n"
    ]
   },
   {
@@ -726,7 +736,7 @@
    "id": "51e34fd4-ad50-4785-a1b6-72e4c28c640c",
    "metadata": {},
    "source": [
-    "`count_duplicate_rows` function notes"
+    "The `count_duplicate_rows` function counts the number of duplicate rows in the dataset, helping to identify and address redundant data.\n"
    ]
   },
   {
@@ -764,7 +774,7 @@
    "id": "98c28153-3b67-45f9-9802-29c4c2d70282",
    "metadata": {},
    "source": [
-    "Non-essential rows notes"
+    "The `zero_rows` variable filters the dataset to find rows where all values (except for the first two columns) are zero, helping to identify and handle rows with no meaningful data.\n"
    ]
   },
   {
@@ -930,7 +940,7 @@
    "id": "c2650c9a-073f-4350-b683-c2e812858e2f",
    "metadata": {},
    "source": [
-    "`check_column_data_types` function notes"
+    "The `check_column_data_types` function checks the data types of each column in the dataset, helping to ensure that all columns are correctly formatted for analysis.\n"
    ]
   },
   {
@@ -980,7 +990,7 @@
    "id": "07a675cb-4417-4ff5-9dcb-ea3caff84170",
    "metadata": {},
    "source": [
-    "Handling null values notes"
+    "The `drop_rows_with_too_many_nulls` function removes rows with more than 50% `null` values, ensuring that only sufficiently complete records are retained in the dataset.\n"
    ]
   },
   {
@@ -1035,7 +1045,7 @@
    "id": "13171746-36ef-4818-85a1-399d95c19f98",
    "metadata": {},
    "source": [
-    "To avoid inaccuracies when filling missing values, drop rows with more than 9 null values"
+    "The `drop_rows_with_excessive_nulls` function specifically targets rows with more than 9 null values. This allows for more granular control over the dataset by removing rows that have a high number of missing values but might not meet the 50% threshold of the first null-dropping function. It helps eliminate records that are likely to have too little useful information, improving the overall quality of the data.\n"
    ]
   },
   {
@@ -1067,7 +1077,7 @@
     "    Returns:\n",
     "    pandas.DataFrame: The DataFrame with rows dropped based on the maximum null count.\n",
     "    \"\"\"\n",
-    "    # Keep only rows where the number of nulls is less than or equal to max_nulls\n",
+    "    # Keep only rows where the number of nulls is less than the max_nulls\n",
     "    return df[df.isnull().sum(axis=1) < max_nulls]\n",
     "\n",
     "df_nulls_processed = drop_rows_with_excessive_nulls(df_nulls_preprocessed)\n",
@@ -1087,7 +1097,7 @@
    "id": "c523a205-9901-4d80-b83a-ce92bbe433e3",
    "metadata": {},
    "source": [
-    "Fill missing values using `bfill_nulls` (Fill Backward) function"
+    "The `bfill_nulls` function fills `null` values in the dataset by carrying the next valid value backward, ensuring that missing data is imputed with the most recent non-null information.\n"
    ]
   },
   {
@@ -1130,7 +1140,7 @@
    "id": "6d963a25-8a95-4c79-910a-501f8756d8c5",
    "metadata": {},
    "source": [
-    "`standardise_float_columns` function used to standardise numeric columns"
+    "The `standardise_float_columns` function is used to standardise numeric columns, making the data easier to read and work with for analysis."
    ]
   },
   {
