--- a/Python_Final_Project.ipynb
+++ b/Python_Final_Project.ipynb
@@ -25,14 +25,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "116ebf35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "16d900c7-1a07-4b64-a30d-a95f4cc54e2a",
    "metadata": {},
@@ -105,7 +97,16 @@
    "id": "5c20abe3-a3f8-47df-a0cd-c30f124fa015",
    "metadata": {},
    "source": [
-    "Importing notes"
+    "In this section, we import essential packages for data analysis and visualisation:\n",
+    "\n",
+    "- **NumPy**: Provides support for numerical operations, including handling missing values.\n",
+    "- **Pandas**: Used for data manipulation and analysis, especially with DataFrames.\n",
+    "- **Seaborn**: Built on top of Matplotlib, this library provides more advanced and visually appealing plots, making it easier to generate insights.\n",
+    "- **Matplotlib**: A core plotting library for basic visualizations.\n",
+    "\n",
+    "We also use the following setup:\n",
+    "- `%matplotlib inline`: Ensures that all plots render directly within this notebook.\n",
+    "- `warnings.filterwarnings('ignore')`: Suppresses unnecessary warnings during execution to keep the output clean and focused on important results.\n"
    ]
   },
   {
@@ -116,7 +117,6 @@
    "outputs": [],
    "source": [
     "# Libraries for data loading, manipulation and analysis\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -143,7 +143,19 @@
    "id": "0cd3bf5f-8c58-43ff-9c9d-04d0fd518022",
    "metadata": {},
    "source": [
-    "Loading notes"
+    "In this section, we load the dataset into the notebook for further analysis. The following steps are performed:\n",
+    "\n",
+    "- **Loading the dataset**: We use **Pandas** to read the data from a CSV file into a DataFrame. This allows for efficient manipulation and analysis.\n",
+    "  \n",
+    "- **Exploring the structure**: After loading, we inspect the first few rows of the dataset using `.head()` to get a quick overview of the data and its columns.\n",
+    "\n",
+    "- **Making a copy**: To preserve the original dataset, we create a copy of it. This ensures that any modifications or cleaning steps do not affect the original data.\n",
+    "\n",
+    "- **Inspecting the dataset**:\n",
+    "  - `.shape`: This method gives us the dimensions of the dataset (number of rows and columns) to understand its size.\n",
+    "  - `.info()`: Provides a concise summary of the dataset, including the column names, non-null counts, and data types. This helps us confirm that the data types are correctly interpreted and identify any missing values.\n",
+    "\n",
+    "This initial inspection ensures that the dataset is structured correctly before moving on to data cleaning and analysis.\n"
    ]
   },
   {
@@ -1809,7 +1821,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "environment",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1823,7 +1835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
