Updated Introduction incorporating additional key questions and objectives

--- a/Python_Final_Project.ipynb
+++ b/Python_Final_Project.ipynb
@@ -39,13 +39,20 @@
    "source": [
     "Deforestation is one of the most significant modern challenges with extensive implications on the environment, economy and society. The process involves the reduction of forest area through the removal of vegetation and trees, leaving the land barren or significantly altered. This is typically driven by factors such as the expansion of agricultural fields, urban development and some industrial activities. The ongoing loss of forest area results in significant ramifications, including habitat destruction, biodiversity loss and the displacement of indigenous communities. Therefore, the understanding of deforestation trends is paramount for devising conservation strategies, identifying most affected countries and implementing sustainable practices.(references)\n",
     "\n",
-    "This project aims to explore and analyse a World forest area dataset to identify deforestation trends and address key questions related to forest area. The data is sourced from Kaggle, uploaded by Takumi Watanabe and last updated 10 months ago.(reference) It encompasses several countries and their annual forest area from the year 1990 to 2021. The forest area is expressed both in square kilometres and as a percentage of total land area. \n",
+    "This project aims to explore and analyse a World forest area dataset to identify deforestation trends and address key questions related to forest area. The data is sourced from Kaggle, uploaded by Takumi Watanabe and last updated 10 months ago.(reference) It comprises of the following features:\n",
+    "* Country_name: list of country names, regions, and income statuses, with each element (country, region, income status) appearing as a distinct entry.\n",
+    "* Country_code: A three letter code that distinctively represents a country.\n",
+    "* 1990 - 2021 year columns: The annual total forest area  expressed in square kilometres.\n",
+    " \n",
     "\n",
     "The key questions to be explored in this project are as follow:\n",
     "\n",
     "* What are the global trends in forest area from 1990 and 2021?\n",
     "* How does the rate of deforestation or afforestation compare across different countries?\n",
-    "* Which countries have seen the largest decrease in forest area between 1990 and 2021?\n",
+    "* Which countries, regions and income levels have seen the largest decrease or increase in forest area between 1990 and 2021?\n",
+    "* What is the relationship between the rate of deforestation and Income status?\n",
+    "* What is the relationship between rate of deforestation and region?\n",
+    "\n",
     "\n",
     "This notebook is organised into several key sections to ensure a structured data analysis approach is employed. The approach leverages Python’s extensive data analysis and visualisation libraries to facilitate an in-depth examination of the dataset. This includes pandas, numpy, matplotlib and seaborn. In the Importing Packages section, these libraries are loaded.  The Data loading section details how the  data is loaded into a DataFrame and initial inspection is performed. In the Data Cleaning section, the data is cleaned and prepared for further analyses by handling missing or inconsistent data. The exploratory data analysis (EDA) section applies both data visualisations and statistical methods to uncover key trends and insights relevant to the project’s objective. The results of the analyses will provide a comprehensive understanding of global deforestation and afforestation trends, highlighting which countries have experienced the greatest losses or gains in forest area. This will be summarised and presented in the last section, Conclusion, including recommendations based on obtained insights."
    ]
@@ -63,7 +70,7 @@
    "id": "e7e117c4",
    "metadata": {},
    "source": [
-    "How has forest area changed globally over the years and which countries are most affected ?\n"
+    "How has forest area changed globally over the years and which countries, regions and income levels are most affected ?\n"
    ]
   },
   {
@@ -81,7 +88,9 @@
    "source": [
     "* To perform exploratory data analysis of the global deforestation dataset.\n",
     "* To analyse the change in global forest area from 1990 and 2021, identifying trends of deforestation or afforestation for each country.\n",
-    "* To identify countries that have the largest decrease and increase in forest area between 1990 and 2021."
+    "* To identify countries, regions and income levels that have the largest decrease and increase in forest area between 1990 and 2021.\n",
+    "* To determine the relationship between income status and rate of deforestation.\n",
+    "* To determine the relationship between various regions and rate of deforestation.\n"
    ]
   },
   {
