--- a/Python_Final_Project.ipynb
+++ b/Python_Final_Project.ipynb
@@ -1869,22 +1869,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "d901d9e1-6b14-4ae0-b9d8-e6cbfeab2b28",
+   "cell_type": "markdown",
+   "id": "2a3d3548-3762-46ff-aa4d-16885cbb68a4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2953308020.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    Based on the Exploratory Data Analysis (EDA) conducted on global forest area trends, several key insights emerge:\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "### Conclusion and Insights\n",
     "\n",
     "Based on the Exploratory Data Analysis (EDA) conducted on global forest area trends, several key insights emerge:\n",
     "\n",
@@ -1909,11 +1897,19 @@
     "\n",
     "This analysis forms a foundation for further exploration into the underlying causes of deforestation, such as economic policies, agricultural demands, or urbanization, and allows for a deeper understanding of what successful conservation strategies might entail.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a0f2725-22fc-4528-b928-c2a92e0aaaac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "environment",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1927,7 +1923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
