--- a/Python_Final_Project.ipynb
+++ b/Python_Final_Project.ipynb
@@ -37,9 +37,9 @@
    "id": "3c83c437-783a-4d71-98e7-723438aacb42",
    "metadata": {},
    "source": [
-    "Deforestation is one of the most significant modern challenges with extensive implications on the environment, economy and society. The process involves the reduction of forest area through the removal of vegetation and trees, leaving the land barren or significantly altered. This is typically driven by factors such as the expansion of agricultural fields, urban development and some industrial activities. The ongoing loss of forest area results in significant ramifications, including habitat destruction, biodiversity loss and the displacement of indigenous communities. Therefore, the understanding of deforestation trends is paramount for devising conservation strategies, identifying most affected countries and implementing sustainable practices.(references)\n",
+    "Deforestation is one of the most significant modern challenges with extensive implications on the environment, economy and society. The process involves the reduction of forest area through the removal of vegetation and trees, leaving the land barren or significantly altered. This is typically driven by factors such as the expansion of agricultural fields, urban development and some industrial activities. The ongoing loss of forest area results in significant ramifications, including habitat destruction, biodiversity loss and the displacement of indigenous communities.(Curley, 2018) (Youmatter, 2020) Therefore, the understanding of deforestation trends is paramount for devising conservation strategies, identifying most affected countries and implementing sustainable practices.\n",
     "\n",
-    "This project aims to explore and analyse a World forest area dataset to identify deforestation trends and address key questions related to forest area. The data is sourced from Kaggle, uploaded by Takumi Watanabe and last updated 10 months ago.(reference) It comprises of the following features:\n",
+    "This project aims to explore and analyse a World forest area dataset to identify deforestation trends and address key questions related to forest area. The data is sourced from Kaggle, uploaded by Takumi Watanabe and last updated 10 months ago.(Watanabe, 2023) It comprises of the following features:\n",
     "* <b>Country_name</b>: list of country names, regions, and income statuses, with each element (country, region, income status) appearing as a distinct entry.\n",
     "* <b>Country_code</b>: A three letter code that distinctively represents a country.\n",
     "* <b>1990 - 2021 year columns</b>: The annual total forest area  expressed in square kilometres.\n",
@@ -1899,12 +1899,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0a0f2725-22fc-4528-b928-c2a92e0aaaac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# References\n",
+    "1. Watanabe, T. (2023). World Forest Area (km and %). [online] Kaggle.com. Available at: https://www.kaggle.com/datasets/webdevbadger/world-forest-area .\n",
+    "2. Curley, J. (2018). How Does Deforestation Affect The Air? [online] Sciencing. Available at: https://www.sciencing.com/deforestation-affect-air-10632/[Accessed 6 Nov. 2024].\n",
+    "3. Youmatter (2020). Deforestation - What Is It? What Are Its Causes, Effects and Solutions? [online] Youmatter. Available at: https://youmatter.world/en/definition/definitions-what-is-definition-deforestation-causes-effects/.\n",
+    "\n",
+    "‌"
+   ]
   }
  ],
  "metadata": {
